force-app/main/default/objects/Case_AI_Analysis__c/Case_AI_Analysis__c.object-meta.xml
<CustomObject>
    <description>Audit log: one record per LLM call made for a Case. Tracks prompt, response, tokens, latency, and errors for debugging, cost analysis, and compliance.</description>
    <label>Case AI Analysis</label>
    <nameField>
        <displayFormat>AN-{00000}</displayFormat>
        <label>Analysis Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case AI Analyses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>