force-app/main/default/objects/Case_AI_Analysis__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>The Case this analysis record belongs to. Master-Detail so analyses cascade-delete with their case.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>AI Analyses</relationshipLabel>
    <relationshipName>AI_Analyses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>