force-app/main/default/objects/Case_AI_Analysis__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error message if Status = Failed (callout exception, parse error, etc.)</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>