force-app/main/default/objects/Case_AI_Analysis__c/fields/Input_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Input_Tokens__c</fullName>
    <description>Number of input (prompt) tokens consumed by this LLM call. Used for cost tracking.</description>
    <label>Input Tokens</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>