force-app/main/default/objects/Case_AI_Analysis__c/fields/Model_Used__c.field-meta.xml
<CustomField>
    <fullName>Model_Used__c</fullName>
    <description>Name of the LLM model used (e.g., meta/llama-3.3-70b-instruct)</description>
    <label>Model Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>