force-app/main/default/objects/Case_AI_Analysis__c/fields/Output_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Output_Tokens__c</fullName>
    <description>Number of output (completion) tokens generated by the LLM. Output tokens cost more than input tokens on most providers.</description>
    <label>Output Tokens</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>