force-app/main/default/objects/Case_AI_Analysis__c/fields/Processing_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time_Ms__c</fullName>
    <description>End-to-end latency of the LLM callout in milliseconds. Used for performance monitoring.</description>
    <label>Processing Time (ms)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>