force-app/main/default/objects/Case_AI_Analysis__c/fields/Raw_Request__c.field-meta.xml
<CustomField>
    <fullName>Raw_Request__c</fullName>
    <description>Full JSON request body sent to the LLM. Useful for prompt-tuning and debugging.</description>
    <label>Raw Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>