force-app/main/default/objects/Case_AI_Analysis__c/fields/Raw_Response__c.field-meta.xml
<CustomField>
    <fullName>Raw_Response__c</fullName>
    <description>Full JSON response body returned by the LLM (before parsing). Critical for debugging malformed outputs.</description>
    <label>Raw Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>