force-app/main/default/objects/Case_AI_Analysis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Status__c</columns>
    <columns>Model_Used__c</columns>
    <columns>Processing_Time_Ms__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>